--- a/Projects/todo-list/angular.json
+++ b/Projects/todo-list/angular.json
@@ -26,8 +26,9 @@
             "tsConfig": "tsconfig.app.json",
             "inlineStyleLanguage": "scss",
             "assets": [
-              "src/favicon.ico",
-              "src/assets"
+              "src/assets",
+              "src/assets/icons",
+              "src/assets/img"
             ],
             "styles": [
               "src/styles.scss"
